--- a/insta-clone/src/app/login/login.component.css
+++ b/insta-clone/src/app/login/login.component.css
@@ -1,114 +1,138 @@
+body {
+  background-color: #fafafa;
+}
 
-  body {
-    background-color: #fafafa;
-  }
-  
-  #wrapper {
-    width: 100vw;
-    height: 100%;
-    overflow: hidden;
-    background-color:#fafafa;
-  }
-  
-  .main-content {
-    position: relative;
-    width: 250px;
-    height: 30rem;
-    margin: 8rem auto;
-    background-color: #fff;
-    border: 2px solid #e6e6e6;
-    padding: 1.875rem 3.125rem 1.875rem;
-  }
-  
-  .header {
-    border: 0px solid gray;
-    margin-bottom: 5px;
-  }
-  
-  .header img {
-    height: 50px;
-    width: 175px;
-    margin: 0 auto;
-    position: relative;
-    left: 0.5rem;
-  }
-  
-  .header div {
-    text-align: center;
-    color: #999999;
-    font-size: 14px;
-    line-height: 1.2rem;
-    margin: 8px 8px 15px;
-    text-decoration: none;
-    font-weight: bold;
-    font-family: 'proxima-nova', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  }
-  
-  .input-1,
-  .input-2 {
-    width: 100%;
-    margin-bottom: 7px;
-    padding: 9px 0px 7px 8px;
-    border: 1px solid #dbdbdb;
-    box-sizing: border-box;
-    border-radius: 3px;
-    line-height: 25px;
-    background: #fafafa;
-    font-family: Arial, Helvetica, sans-serif;
+#wrapper {
+  width: 100vw;
+  height: 100%;
+  overflow: hidden;
+  background-color:#fafafa;
+}
 
-  }
-  
-  .overlap-text {
-    position: relative;
-  }
-  
-  .overlap-text a {
-    text-align: center;
-    margin: 80px 33px 0px;
-    top: 40px;
-    color: #003569;
-    font-size: 14px;
-    line-height: 20px;
-    text-decoration: none;
-    font-family: 'proxima-nova', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  }
-  
-  .btn {
-    width: 100%;
-    background-color: #3897f0;
-    border: 1px solid #3897f0;
-    padding: 5px 12px;
-    margin-top:8px;
-    color: #fff;
-    font-weight:normal;
-    cursor: pointer;
-    line-height: 25px;
-    border-radius: 5px;
-    font-size: medium;
-  }
-  
-  .sub-content {
-    width: 250px;
-    height: 40%;
-    margin: 10px auto;
-    border: 1px solid #e6e6e6;
-    padding: 20px 20px;
-    background-color: #fff;
-  }
-  
-  .s-part {
-    text-align: center;
-    font-family: 'proxima-nova', 'Helvetica Neue', Arial, Helvetica, sans-serif ;
-    font-weight: 100;
-  }
-  
-  .s-part a {
-    text-decoration: none;
-    cursor: pointer;
-    color: #3897f0;
-    font-weight: bold;
-  }
-  
-  input:focus {
-      border-style: solid;
-  }
+.main-content {
+  position: relative;
+  width: 250px;
+  height: 100%;
+  margin: 8rem auto 2rem;
+  background-color: #fff;
+  border: 2px solid #e6e6e6;
+  padding: 3rem 3.125rem;
+}
+
+.header {
+  border: 0px solid gray;
+  margin-bottom: 5px;
+}
+
+.header img {
+  height: 50px;
+  width: 175px;
+  margin: 0 auto;
+  position: relative;
+  left: 0.5rem;
+}
+
+.header div {
+  text-align: center;
+  color: #999999;
+  font-size: 14px;
+  line-height: 1.2rem;
+  margin: 8px 8px 15px;
+  text-decoration: none;
+  font-weight: bold;
+  font-family: 'proxima-nova', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
+
+.input-1,
+.input-2 {
+  width: 100%;
+  margin-bottom: 7px;
+  padding: 9px 0px 7px 8px;
+  border: 1px solid #dbdbdb;
+  box-sizing: border-box;
+  border-radius: 3px;
+  line-height: 25px;
+  background: #fafafa;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.overlap-text {
+  position: relative;
+}
+
+.overlap-text a {
+  text-align: center;
+  margin: 80px 33px 0px;
+  top: 40px;
+  color: #003569;
+  font-size: 14px;
+  line-height: 20px;
+  text-decoration: none;
+  font-family: 'proxima-nova', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
+
+.btn {
+  width: 100%;
+  background-color: #3897f0;
+  border: 1px solid #3897f0;
+  padding: 5px 12px;
+  margin-top:8px;
+  color: #fff;
+  font-weight:normal;
+  cursor: pointer;
+  line-height: 25px;
+  border-radius: 5px;
+  font-size: medium;
+}
+
+.sub-content {
+  width: 250px;
+  height: 40%;
+  margin: 10px auto;
+  border: 1px solid #e6e6e6;
+  padding: 20px 20px;
+  background-color: #fff;
+}
+
+.s-part {
+  text-align: center;
+  font-family: 'proxima-nova', 'Helvetica Neue', Arial, Helvetica, sans-serif ;
+  font-weight: 100;
+}
+
+.s-part a {
+  text-decoration: none;
+  cursor: pointer;
+  color: #3897f0;
+  font-weight: bold;
+}
+
+input:focus {
+    border-style: solid;
+}
+/* App Store */
+.app p {
+  line-height: 3rem;
+  color:#262626;
+  font-size:14px;
+  text-align:center;
+  margin:10px 20px;
+}
+
+.app-img {
+  flex-direction: row;
+  justify-content: center;
+  margin:1% 40.5%;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+}
+
+.app-img a {
+  margin-right:8px;
+  height: 43.5px;
+}
+
+.app-img img {
+  height:40px;
+}
