getting user data from database on frontend

--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -46,9 +46,9 @@
     </div>
 
     <div class="mx-3 mt-3">
-        <h6>Shubham Sharma</h6>
+        <h6>{{name}</h6>
         <p>
-            I am a Software Developer. Currently I am an Intern at Cyber Group. I am pursuing B.Tech from Sharda University.
+            {{bio}}
         </p>
     </div>
 
