--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -1,14 +1,13 @@
 <nav class="navbar fixed-top navbar-light bg-white" id="nav">
     <div class="container">
       <div id="logo">
-         <img id="ig" src="../../assets/images/iglogo.png" routerLink='/feed'>
-         <img id="bar" src="../../assets/images/Untitled.png" routerLink='/feed'>
+         <!-- <img id="ig" src="../../assets/images/iglogo.png" routerLink='/feed'> -->
+         <!-- <img id="bar" src="../../assets/images/Untitled.png" routerLink='/feed'> -->
          <img id="lettering" src="../../assets/images/letter.png" routerLink='/feed'>
-     </div>
+      </div>
      
      <div class="searchContainer"> 
-        <input #searchBox (input)="search(searchBox.value)"id="searchBox" type="search" placeholder="Search" value=""
-        />
+        <input #searchBox (input)="search(searchBox.value)"id="searchBox" type="search" placeholder="Search" value=""/>
         <ul class="search-result">
             <li *ngFor="let user of users$ | async" >
               <a routerLink="/profile">
@@ -18,12 +17,12 @@
           </ul> 
     </div>
      <div id="activity">
-            <input type="checkbox" id="exploreToggle" class="visually-hidden">
-            <label for="exploreToggle"  class="exploreControl"></label>       
-            <input type="checkbox" id="toggle" class="visually-hidden">
-            <label for="toggle"  class="control"></label>
-            <input type="checkbox" id="userToggle" class="visually-hidden">
-            <label for="userToggle"  class="userControl" routerLink= "/profile"></label>
+        <input type="checkbox" id="exploreToggle" class="visually-hidden">
+        <label for="exploreToggle"  class="exploreControl"></label>       
+        <input type="checkbox" id="toggle" class="visually-hidden">
+        <label for="toggle"  class="control"></label>
+        <input type="checkbox" id="userToggle" class="visually-hidden">
+        <label for="userToggle"  class="userControl" routerLink= "/profile"></label>
      </div>
     </div>  
 </nav>
