--- a/insta-clone/src/app/image-gallery/image-gallery.component.css
+++ b/insta-clone/src/app/image-gallery/image-gallery.component.css
@@ -1,57 +1,13 @@
-/*
-
-All grid code is placed in a 'supports' rule (feature query) at the bottom of the CSS (Line 310). 
-        
-The 'supports' rule will only run if your browser supports CSS grid.
-
-Flexbox and floats are used as a fallback so that browsers which don't support grid will still recieve a similar layout.
-
-*/
-
-/* Base Styles */
-
-:root {
-    font-size: 10px;
+.gallery_product
+{
+    margin-bottom: 30px;
 }
-
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
+.img-responsive{
+    
+    width: 21.25rem;
+    height: 21.25rem;
+    
 }
-
-body {
-    font-family: "Open Sans", Arial, sans-serif;
-    min-height: 100vh;
-    background-color: #fafafa;
-    color: #262626;
-    padding-bottom: 3rem;
-}
-
-img {
-    display: block;
-}
-
-.container {
-    max-width: 93.5rem;
-    margin: 0 auto;
-    padding: 0 2rem;
-}
-
-.btn {
-    display: inline-block;
-    font: inherit;
-    background: none;
-    border: none;
-    color: inherit;
-    padding: 0;
-    cursor: pointer;
-}
-
-.btn:focus {
-    outline: 0.5rem auto #4d90fe;
-}
-
 .visually-hidden {
     position: absolute !important;
     height: 1px;
@@ -59,91 +15,28 @@ img {
     overflow: hidden;
     clip: rect(1px, 1px, 1px, 1px);
 }
-
-
-
-
-/* Gallery Section */
-
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -1rem -1rem;
-    padding-bottom: 3rem;
-}
-
-.gallery-item {
-    position: relative;
-    flex: 1 0 22rem;
-    margin: 1rem;
-    color: #fff;
-    cursor: pointer;
-}
-
-.gallery-item:hover .gallery-item-info,
-.gallery-item:focus .gallery-item-info {
+.gallery_product:hover .gallery-item-info,
+.gallery_product:focus .gallery-item-info {
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 21.25rem;
+    height: 21.25rem;
+    color: white;
     background-color: rgba(0, 0, 0, 0.3);
 }
-
 .gallery-item-info {
     display: none;
 }
 
 .gallery-item-info li {
     display: inline-block;
-    font-size: 1.7rem;
-    font-weight: 600;
+    font-size: 1.3rem;
+    font-weight: 500;
 }
 
 .gallery-item-likes {
     margin-right: 2.2rem;
-}
-
-.gallery-item-type {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 2.5rem;
-    text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
-}
-
-.fa-clone,
-.fa-comment {
-    transform: rotateY(180deg);
-}
-
-.gallery-image {
-    max-width: 100%;
-    width: 18.25rem;
-    height: 100%;
-    object-fit: cover;
-}
-/*
-
-The following code will only run if your browser supports CSS grid.
-
-Remove or comment-out the code block below to see how the browser will fall-back to flexbox & floated styling. 
-
-*/
-
-@supports (display: grid) {
-   
-    .gallery {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
-        grid-gap: 2rem;
-    }
-    
-    .gallery-item,
-    .gallery {
-        width: auto;
-        margin: 0;
-    }
 }
