--- a/insta-clone/src/app/image-gallery/image-gallery.component.html
+++ b/insta-clone/src/app/image-gallery/image-gallery.component.html
@@ -1,26 +1,46 @@
-  <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <title>{{title}}</title>
-    <div class="container">
-         <div class="gallery">
-             <div *ngFor = "let img of allImages">
-                  <div class="gallery-item">
-                    <img src={{img}} class="gallery-image" alt="">
-                       
-                                  <div class="gallery-item-info">
-                                       <ul>
-                                          <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart-o" aria-hidden="true"></i> 89</li>
-                                          <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 5</li>
-                                      </ul>
-                                    </div>
-                                 </div>
-                            </div>
+<div class="container mt-5">
+  <div class="gallery-item row">
+      <div *ngFor = "let img of allImages" class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
+          <img src={{img}} class="img-responsive">
+          <div class="gallery-item-info">
+            <ul>
+              <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 89</li>
+              <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 5</li>
+            </ul>
+          </div>
+      </div>
+  </div>
+</div>
+
+
+<!-- <div class="container">
+  <div class="gallery row">
+      <div *ngFor = "let img of allImages" class="col-md-4">
+        <div class="thumbnail gallery-item row">
+          <img src={{img}} alt="image">
+          <div class="gallery-item-info">
+            <ul>
+              <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart-o" aria-hidden="true"></i> 89</li>
+              <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 5</li>
+            </ul>
+          </div>
+        </div>
+      </div> 
+  </div>
+</div> -->
+   
+<!-- <div class="container">
+  <div class="gallery">
+      <div *ngFor = "let img of allImages">
+        <div class="gallery-item row">
+          <img src={{img}} class="gallery-image" alt="">  
+            <div class="gallery-item-info">
+              <ul>
+                <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart-o" aria-hidden="true"></i> 89</li>
+                <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 5</li>
+              </ul>
             </div>
-     </div>
-        <!-- End of container -->
-    
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+          </div>
+        </div>
+    </div>
+</div> -->
