getting data from database for loggedin and other users

--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -11,7 +11,7 @@
         />
         <ul class="search-result">
             <li *ngFor="let user of users$ | async" >
-              <a routerLink="/profile">
+              <a [routerLink]="['/profile', user.instaHandle]">
                 {{user.instaHandle}}
               </a>
             </li>
@@ -23,7 +23,7 @@
             <input type="checkbox" id="toggle" class="visually-hidden">
             <label for="toggle"  class="control"></label>
             <input type="checkbox" id="userToggle" class="visually-hidden">
-            <label for="userToggle"  class="userControl" routerLink= "/profile"></label>
+            <label for="userToggle"  class="userControl" (click)="myProfile()"></label>
      </div>
     </div>  
 </nav>
