--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-light bg-white" id="nav">
-    <div class="container">
+  <div class="container">
       <div id="logo">
          <!-- <img id="ig" src="../../assets/images/iglogo.png" routerLink='/feed'> -->
          <!-- <img id="bar" src="../../assets/images/Untitled.png" routerLink='/feed'> -->
@@ -24,5 +24,8 @@
             <input type="checkbox" id="userToggle" class="visually-hidden">
             <label for="userToggle"  class="userControl" (click)="myProfile()"></label>
      </div>
-    </div>  
+     <div class="nav-item">
+      <a class="nav-link" routerLink="/login" (click)="logout()">Logout</a>
+     </div> 
+  </div>  
 </nav>
