pushing checkInstaHandle function

--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.css
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.css
@@ -10,6 +10,12 @@
     color: gray;
     border: 1px solid #DBDBDB;
 }
+
+/* .follow-btn{
+    color: gray;
+    border: 1px solid #DBDBDB;
+} */
+
 .insta-handle-div{
     padding-right: 3rem;
 
