--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -7,8 +7,9 @@
         <div class="col-lg-8 mt-4 profile-details">
             <div class="row edit-profile-div">
                 <h3 class="user-name mr-3">{{username}}</h3>
-                <a routerLink="/accounts/edit"><button class="btn edit-profile-btn mr-3"><b>Edit Profile</b></button></a>
-                <img src="https://image.flaticon.com/icons/svg/481/481271.svg" class="mt-1 settings-img">
+                <a routerLink="/accounts/edit" [style.display]="isVisible ? 'block' : 'none'"  ><button class="btn edit-profile-btn mr-3"><b>Edit Profile</b></button></a>
+                <a [style.display]="isVisible ? 'none' : 'block'" ><button class="btn btn-primary mr-3"><b>Follow</b></button></a>
+                <img src="https://image.flaticon.com/icons/svg/481/481271.svg" [style.display]="isVisible ? 'block' : 'none'"  class="mt-1 settings-img">
             </div>
 
             <div class="row follow-div mt-3">
@@ -31,8 +32,6 @@
         </div>
     </div>
 </div>
-
-
 
 <!-- <div class="d-sm-none d-md-block d-none d-sm-block mt-5">
     <div class="row mx-4">
