--- a/insta-clone/src/app/edit-profile/edit-profile.component.html
+++ b/insta-clone/src/app/edit-profile/edit-profile.component.html
@@ -1,4 +1,121 @@
-<div class="col-xs-12">
+<app-homenav></app-homenav>
+<div class="container edit-profile-container">
+    <div class="row">
+        <div class="col-lg-3 col-md-3">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="javascipt: void(0)" routerLink="editProfileDetails" class="nav-link active">
+                        <span class="link-text">Edit Profile</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="javascipt: void(0)" routerLink="changePassword" class="nav-link">
+                        <span class="link-text">Change Password</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="" routerLink="" class="nav-link">
+                        <span class="link-text">Apps and Websites</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="" routerLink="" class="nav-link">
+                        <span class="link-text">Email and SMS</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="" routerLink="" class="nav-link">
+                        <span class="link-text">Push Notifications</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="" routerLink="" class="nav-link">
+                        <span class="link-text">Manage Contacts</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="" routerLink="" class="nav-link">
+                        <span class="link-text">Privacy and Security</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="" routerLink="" class="nav-link">
+                        <span class="link-text">Login Activity</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="" routerLink="" class="nav-link">
+                        <span class="link-text">Emails from Instagram</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-9 col-lg-9 edit-profile-div">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+<!-- <div class="row m-auto">
+      <div class="col-md-3 col-lg-3" id="myDiv">
+          <ul class="navbar-nav">
+          
+              <li class="logo">
+                  <a class="nav-link-heading">
+                      <span class="">Review Tab</span>
+                      <fa-icon [icon]="faRight"></fa-icon>
+                  </a>
+              </li>
+              
+              <li class="nav-item ">
+                  <a href="javascipt: void(0)" routerLink="allReviews" class="nav-link active">
+                      <fa-icon [icon]="faFile"></fa-icon>
+                      <span class="link-text">Self-Reviews</span>
+                  </a>
+              </li>
+              
+              <li class="nav-item">
+                  <a href="javascipt: void(0)" routerLink="" class="nav-link">
+                      <span class="link-text">Pending By Reviewer</span>
+                  </a>
+              </li>
+              
+              <li class="nav-item">
+                  <a href="javascipt: void(0)" routerLink="pendingByQAer" class="nav-link">
+                      <fa-icon [icon]="faEdit"></fa-icon>
+                      <span class="link-text">Pending By QAer</span>
+                  </a>
+              </li>
+          
+              <li class="nav-item">
+                  <a href="javascipt: void(0)" routerLink="closed" class="nav-link">
+                      <fa-icon [icon]="faFileSignature"></fa-icon>
+                      <span class="link-text">Closed</span>
+                  </a>
+              </li>
+          
+          </ul>
+      </div>
+      
+      <div class="col-md-9 col-lg-9 p-1 table-div">
+          <router-outlet></router-outlet>
+      </div>
+  </div> -->
+
+
+
+<!-- <div class="col-xs-12">
     <div class="panel panel-default panel-info Profile">
       <div class="panel-heading"> <h6>Edit Profile</h6> </div>
       <div class="top"></div>
@@ -73,10 +190,10 @@
                                           </div>
                                     </div>
                               </form>
-                        </div>  <!-- end form-horizontal -->
-      </div> <!-- end panel-body -->
+                        </div>  
+      </div> 
 
-    </div> <!-- end panel -->
+    </div> 
     
 
-  </div> <!-- end size -->
+  </div> -->
