--- a/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
+++ b/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
@@ -14,25 +14,25 @@
                 <div class="form-group row">
                     <label class="col-lg-3 control-label text-right">Name</label>
                     <div class="col-lg-8">
-                        <input type="text" class="form-control" name="Name"  required="required">
+                        <input type="text" class="form-control" name="Name" [value]="name"  required="required">
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 control-label text-right">Username</label>
                     <div class="col-lg-8">
-                        <input type="text" class="form-control" name="Username"  required="required">
+                        <input type="text" class="form-control" name="Username" [value]="Username" #uname required="required">
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 control-label text-right">Website</label>
                     <div class="col-lg-8">
-                        <input type="text" class="form-control" name="Website"  required="required">
+                        <input type="text" class="form-control" name="Website" [value]="Website" required="required">
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 control-label text-right">Bio</label>
                     <div class="col-lg-8">
-                        <textarea class="form-control" type="text" name="Bio"></textarea>
+                        <textarea class="form-control" type="text" name="Bio" [value]="bio"></textarea>
                     </div>
                 </div>
                 <div class="row">
@@ -76,7 +76,7 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-lg-9 offset-lg-3">
-                        <button class="btn btn-primary" ng-click="updateMe()">Submit</button>
+                        <button class="btn btn-primary" (click)="update()">Submit</button>
                     </div>
                 </div>    
             </form> 
