--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -17,8 +17,8 @@
         </ul> 
     </div>
      <div id="activity">
-            <input type="checkbox" id="homeToggle" class="visually-hidden">
-            <label for="homeToggle"  class="homeControl"></label>
+            <!-- <input type="checkbox" id="homeToggle" class="visually-hidden">
+            <label for="homeToggle"  class="homeControl"></label> -->
             <input type="checkbox" id="exploreToggle" class="visually-hidden">
             <label for="exploreToggle"  class="exploreControl"></label>       
             <input type="checkbox" id="toggle" class="visually-hidden">
