--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -85,7 +85,7 @@
         <div class="col-lg-3 offset-lg-1 mt-4 profile-image-div">
             <img src="../../assets/ss.png" alt="Profile Image" class="rounded-circle profile-img">
         </div>
-        <div class="col-lg-8 mt-4 profile-details" style="background-color: cadetblue;">
+        <div class="col-lg-8 mt-4 profile-details" >
             <div class="row edit-profile-div">
                 <h3 class="user-name mr-3">{{username}}</h3>
 
