--- a/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
+++ b/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
@@ -26,7 +26,7 @@
                 <div class="form-group row">
                     <label class="col-lg-3 control-label text-right">Website</label>
                     <div class="col-lg-8">
-                        <input type="text" class="form-control" #uwebsite name="Website" value="{{Website}}" required="required">
+                        <input type="text" class="form-control" #uwebsite name="Website" value="{{website}}" required="required">
                     </div>
                 </div>
                 <div class="form-group row">
