--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -89,9 +89,10 @@
             <div class="row edit-profile-div">
                 <h3 class="user-name mr-3">{{username}}</h3>
 
-                <a routerLink="/accounts/edit" [style.display]="isVisible ? 'block' : 'none'"  ><button class="btn edit-profile-btn mr-3"><b>Edit Profile</b></button></a>
-                <a [style.display]="isVisible ? 'none' : 'block'" ><button class="btn btn-primary mr-3" (click)="follow()"><b>Follow</b></button></a>
-                <img src="https://image.flaticon.com/icons/svg/481/481271.svg" [style.display]="isVisible ? 'block' : 'none'" data-toggle="modal" data-target="#settingsModal" class="mt-1 settings-img">
+                <a routerLink="/accounts/edit" [style.display]="editButton ? 'block' : 'none'"  ><button class="btn edit-profile-btn mr-3"><b>Edit Profile</b></button></a>
+                <a [style.display]="followButton ? 'block' : 'none'" ><button class="btn btn-primary mr-3" (click)="follow()"><b>Follow</b></button></a>
+                <a [style.display]="unfollowButton ? 'block' : 'none'" ><button class="btn edit-profile-btn mr-3" (click)="unfollow()"><b>Following</b></button></a>
+                <img src="https://image.flaticon.com/icons/svg/481/481271.svg" [style.display]="editButton ? 'block' : 'none'" data-toggle="modal" data-target="#settingsModal" class="mt-1 settings-img">
 
             </div>
             <div class="row follow-div mt-3">
