loading data automatically

--- a/insta-clone/src/app/change-password/change-password.component.html
+++ b/insta-clone/src/app/change-password/change-password.component.html
@@ -6,7 +6,7 @@
                     <img class="rounded-circle" src="../../assets/ss.png" style="width: 3rem; height: 3rem; float:right;">
                 </div>
                 <div class="col-lg-9">
-                    <h4>himanshukumar2750</h4>
+                    <h4>{{instaHandle}}</h4>
                 </div>
             </div>
             <form class="form-horizontal" style="margin-top: 2.5rem;">
