home, navigation, upload picture done

--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -18,7 +18,7 @@
     </div>
      <div id="activity">
             <input type="checkbox" id="homeToggle" class="visually-hidden">
-            <label for="homeToggle"  class="homeControl"></label>
+            <label for="homeToggle"  class="homeControl mr-4" routerLink='/feed'></label>
             <input type="checkbox" id="exploreToggle" class="visually-hidden">
             <label for="exploreToggle"  class="exploreControl"></label>       
             <input type="checkbox" id="toggle" class="visually-hidden">
