--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.css
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.css
@@ -44,3 +44,11 @@
 #settingsModal .modal-header:hover{
     cursor: pointer;
 }
+.changePassword{
+    text-decoration: none;
+    color: black;
+}
+
+.removePhoto{
+    color: red;
+}
