--- a/insta-clone/src/app/homenav/homenav.component.css
+++ b/insta-clone/src/app/homenav/homenav.component.css
@@ -76,7 +76,7 @@
     content: url('../../assets/images/home.png');
 }
 #homeToggle:checked ~ .homeControl::after {
-    content: url('https://img.icons8.com/material-rounded/24/000000/home.png');
+    content: url('../../assets/images/homef.png');
 }
 
 .control::after {
@@ -141,5 +141,8 @@
 input[type=search]::-webkit-search-cancel-button {
     -webkit-appearance: searchfield-cancel-button;
     cursor: pointer;
+}
+.homeControl{
+    vertical-align: middle;
 }
 
