--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -45,7 +45,7 @@
         <div class="modal-content">
             <!-- Modal header -->
             <div class="modal-header text-center">
-                <p class="modal-title w-100">Change Password</p>
+                <p class="modal-title w-100" [routerLink]="['../../accounts/edit/changePassword']"data-dismiss="modal">Change Password</p>
             </div>
             <div class="modal-header text-center">
                 <a class="modal-title w-100" data-dismiss="modal" (click)="logout()">Logout</a>
