--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.css
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.css
@@ -5,6 +5,22 @@
     border: 3px solid #ddd;
     padding: 5px;
 }
+.follwers-img,.following-img{
+    width: 3rem;
+    height: 3rem;
+    border: 2px solid #ddd;
+    padding: 2px;
+}
+.followers-name,.following-name{
+    color: #999999;
+}
+.following-username>a, .followers-username>a{
+    color: black;
+    text-decoration: none;
+}
+.followers-username:hover,.following-username:hover{
+    cursor: pointer;
+}
 
 .edit-profile-btn{
     color: gray;
