token problem solved and corrected signup functionality

--- a/insta-clone/src/app/login/login.component.html
+++ b/insta-clone/src/app/login/login.component.html
@@ -9,7 +9,7 @@
       <div >
         <input type="password" placeholder="Password" #password class="input-2" />
       </div>
-      <input type="button" (click)="loginFunction()" value="Log In" class="btn"/>
+      <input type="button" (click)="createUserObj()" value="Log In" class="btn"/>
       <div class="overlap-text">
       <a href="#">Forgot Password?</a>
     </div>
