--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -20,8 +20,8 @@
                   <div class="followers-name">{{followers.followerId.name}}</div>
                 </div>
                 <div class="col-lg-3">
-                    <a [style.display]="followButton ? 'block' : 'none'" ><button class="btn btn-primary follow-btn" (click)="follow()">Follow</button></a>
-                    <a [style.display]="unfollowButton ? 'block' : 'none'" ><button class="btn unfollow-btn" (click)="unfollow()">Following</button></a>
+                    <a [style.display]="followButton ? 'block' : 'none'" ><button class="btn btn-primary follow-btn" (click)="follow(followers.followerId._id)">Follow</button></a>
+                    <a [style.display]="unfollowButton ? 'block' : 'none'" ><button class="btn unfollow-btn" (click)="unfollow(followers.followerId._id)">Following</button></a>
                 </div>
               </div>    
           </div>
@@ -52,8 +52,8 @@
                   <div class="following-name">{{following.followingId.name}}</div>
                 </div>
                 <div class="col-lg-3">
-                    <a [style.display]="followButton ? 'block' : 'none'" ><button class="btn btn-primary follow-btn" (click)="follow()">Follow</button></a>
-                    <a [style.display]="unfollowButton ? 'block' : 'none'" ><button class="btn unfollow-btn" (click)="unfollow()">Following</button></a>
+                    <a [style.display]="followButton ? 'block' : 'none'" ><button class="btn btn-primary follow-btn" (click)="follow(following.followingId._id)">Follow</button></a>
+                    <a [style.display]="unfollowButton ? 'block' : 'none'" ><button class="btn unfollow-btn" (click)="unfollow(following.followingId._id)">Following</button></a>
                 </div>
               </div> 
           </div>
@@ -135,8 +135,8 @@
                 <h3 class="user-name mr-3">{{username}}</h3>
 
                 <a routerLink="/accounts/edit" [style.display]="editButton ? 'block' : 'none'"  ><button class="btn edit-profile-btn mr-3"><b>Edit Profile</b></button></a>
-                <a [style.display]="followButton ? 'block' : 'none'" ><button class="btn btn-primary mr-3" (click)="follow()"><b>Follow</b></button></a>
-                <a [style.display]="unfollowButton ? 'block' : 'none'" ><button class="btn edit-profile-btn mr-3" (click)="unfollow()"><b>Following</b></button></a>
+                <a [style.display]="followButton ? 'block' : 'none'" ><button class="btn btn-primary mr-3" (click)="followObj()"><b>Follow</b></button></a>
+                <a [style.display]="unfollowButton ? 'block' : 'none'" ><button class="btn edit-profile-btn mr-3" (click)="unfollowObj()"><b>Following</b></button></a>
                 <img src="https://image.flaticon.com/icons/svg/481/481271.svg" [style.display]="editButton ? 'block' : 'none'" data-toggle="modal" data-target="#settingsModal" class="mt-1 settings-img">
 
             </div>
