--- a/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
+++ b/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
@@ -15,8 +15,35 @@
                 <p class="modal-title w-100 cursor-pointer" data-dismiss="modal">Cancel</p>
             </div>
         </div>
-      </div>
-  </div>
+    </div>
+</div>
+
+<div class="modal" id="genderModal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <!-- Modal header -->
+            <div class="modal-header text-center" style="padding: 1.5rem;">
+                <p class="modal-title w-100"><b>Gender</b></p>
+            </div>
+            <div class="modal-body">
+                <label class="radio">
+                    <input type="radio" name="gender"  value="male" (click)="radioButtonValue('male')"> Male
+                </label><br>
+                <label class="radio">
+                    <input type="radio" name="gender" value="female" (click)="radioButtonValue('female')"> Female
+                  </label><br>
+                <label class="radio">
+                    <input type="radio" name="gender" value="not to say" (click)="radioButtonValue('not to say')"> Prefer Not To Say
+                </label>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" style="width: 100%;" data-dismiss="modal">Done</button>
+            </div>
+                 
+            
+        </div>
+    </div>
+</div>
 
 <div class="container">
     <div class="row">
@@ -76,15 +103,16 @@
                 <div class="form-group row">
                     <label class="col-lg-3 control-label text-right">Gender</label>
                     <div class="col-lg-8">
-                        <label class="radio-inline mr-3">
-                            <input type="radio" name="male" checked>male
+                        <input id="genderInput"  type="text" class="form-control" #ugender value="{{gender}}" data-toggle="modal" data-target="#genderModal">
+                        <!-- <label class="radio-inline mr-3">
+                            <input type="radio" name="gender" value="male" onclick="radioButtonValue(this.value)">male
                           </label>
                           <label class="radio-inline mr-3">
-                            <input type="radio" name="female">female
+                            <input type="radio" name="gender" value="female" onclick="radioButtonValue(this.value)">female
                           </label>
                           <label class="radio-inline">
-                            <input type="radio" name="not to say">not to say
-                          </label>
+                            <input type="radio" name="gender" value="not to say" onclick="radioButtonValue(this.value)">not to say
+                          </label> -->
                     </div>
                 </div>
                 <div class="form-group row">
