--- a/insta-clone/src/app/login/login.component.html
+++ b/insta-clone/src/app/login/login.component.html
@@ -1,5 +1,57 @@
-<!-- Latest compiled and minified CSS -->
-<div id="container wrapper">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-3 offset-lg-4 login-card">
+      <div class="row insta-image-row">
+        <img src="https://i.imgur.com/zqpwkLQ.png" />
+      </div>
+      <div class="row input-row">
+        <input type="text" placeholder="Phone number, username or email" #instaHandle class="input-1" />
+      
+        <input type="password" placeholder="Password" #password class="input-2" />
+      
+        <input type="button" (click)="loginFunction()" value="Log In" class="btn login-btn"/>  
+      </div>
+
+      <div class="row or-row">
+        <p class="or"><strong>OR</strong></p>
+      </div>
+      <div class="row login-with-fb-row">
+        <button class="btn login-with-fb"><img src="../../assets/images/fb.png"> Log in with Facebook</button>
+      </div>
+      <div class="row forgot-pass-row">
+        <a href="#">Forgot Password?</a>
+      </div>
+    </div>
+  </div> 
+  <div class="row below-login-row">
+    <div class="col-lg-3 offset-lg-4">
+      <div class="row">
+        <span>Don't have an account? <a routerLink="/signup">Sign up</a></span>
+      </div>  
+    </div>
+  </div>
+  <div class="row get-app-row">
+    <div class="col-lg-3 offset-lg-4">
+      <div class="row get-app">
+        <p>Get the app.</p>
+      </div>
+      <div class="row app-img">
+        <div class="col-lg-4 offset-lg-1">
+          <a href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&amp;ct=igweb.loginPage.badge&amp;mt=8">
+            <img src="https://www.instagram.com/static/images/appstore-install-badges/badge_ios_english-en.png/4b70f6fae447.png" >
+          </a>
+        </div>
+        <div class="col-lg-4 offset-lg-1">
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&amp;referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26utm_medium%3Dbadge">
+            <img src="https://www.instagram.com/static/images/appstore-install-badges/badge_android_english-en.png/f06b908907d5.png">
+          </a>
+        </div>
+      </div>  
+    </div>
+  </div>
+</div>
+
+<!-- <div id="container wrapper">
   <div class="main-content ">
     <div class="header">
       <img src="https://i.imgur.com/zqpwkLQ.png" />
@@ -31,4 +83,4 @@
     <a href="https://play.google.com/store/apps/details?id=com.instagram.android&amp;referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26utm_medium%3Dbadge">
       <img src="https://www.instagram.com/static/images/appstore-install-badges/badge_android_english-en.png/f06b908907d5.png">
     </a>  
-  </div>  <!-- App-img end-->
+  </div>   -->
