--- a/insta-clone/src/app/signup/signup.component.css
+++ b/insta-clone/src/app/signup/signup.component.css
@@ -1,13 +1,125 @@
-  body {
-    background-color:#fafafa;
-  }
+.container-fluid{
+  background-color: #FAFAFA;
+}
+.signup-card{
+  background-color: white;
+  border:1px solid #DBDBDB;
+  margin-top: 1%;
+}
+.insta-image-row{
+  padding:1.7rem 30% 0;
+}
+.signup-message-row{
+  padding:1.2rem 3rem 0.3rem
+}
+.signup-message-row >h2{
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #999999;
+}
+.login-with-fb-row{
+  padding:0 3rem;
+}
+
+
+.login-with-fb{
+  color: black;
+  font-weight: 550;
+  font-size: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+.or-row{
+  padding:2rem 3rem 1rem;
+}
+.or{
+  width: 100%; 
+  text-align: center; 
+  border-bottom: 1px solid #9999A6; 
+  line-height: 0.2em;
+  background:#fff;
+  color: #DBDBDB;
   
-  #wrapper {
-    width: 100vw;
-    height: 100%;
-    overflow: hidden;
-    background-color:#fafafa;
+} 
+.or strong{
+   background: white;
+   padding:0 2rem;
   }
+
+.input-row{
+  padding:0 3rem 1rem;
+}
+
+.input-1,
+.input-2 {
+  width: 100%;
+  margin-bottom: 7px;
+  padding: 9px 0px 7px 8px;
+  border: 1px solid #dbdbdb;
+  box-sizing: border-box;
+  border-radius: 3px;
+  line-height: 25px;
+  background: #fafafa;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.signup-btn {
+  width: 100%;
+  background-color: #3897f0;
+  border: 1px solid #3897f0;
+  padding: 5px 12px;
+  margin-top:8px;
+  color: #fff;
+  font-weight:normal;
+  cursor: pointer;
+  line-height: 25px;
+  border-radius: 5px;
+  font-size: medium;
+}
+
+input:focus {
+    border-style: solid;
+}
+.terms-row{
+  padding:1rem 4rem;
+}
+.terms-row>h2{
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #999999;
+}
+.below-signup-row{
+  margin-top: 1rem;
+}
+.below-signup-row>.col-lg-3{
+  background-color: white;
+  border:1px solid #DBDBDB;
+}
+.below-signup-row>.col-lg-3>.row{
+  padding:2rem 30%;
+}
+.get-app-row{
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+.get-app>p{
+  margin-left: 42%;
+  line-height: 3rem;
+  color:#262626;
+  font-size:1rem;
+  
+  
+  
+}
+.app-img img {
+  height:3rem;
+}
+
   
   .main-content {
     position: relative;
@@ -112,4 +224,10 @@
   
   input:focus {
       border-style: solid;
+  }
+
+  @media (min-width: 992px) {
+    .offset-lg-4 {
+       margin-left: 37%; /* <- your value here */
+    }
   }
