--- a/insta-clone/src/app/login/login.component.html
+++ b/insta-clone/src/app/login/login.component.html
@@ -4,23 +4,30 @@
     <div class="header">
       <img src="https://i.imgur.com/zqpwkLQ.png" />
     </div>
-    <div class="l-part">
-      <input type="text" placeholder="Username or Email" #instaHandle class="input-1" />
+    <form #form="ngForm" class="l-part" (ngSubmit)="loginFunction(form.value)">
+      <input type="text" name="instaHandle" #instaHandle="ngModel" ngModel required placeholder="Username or Email"  class="input-1" />
       <div >
-        <input type="password" placeholder="Password" #password class="input-2" />
+          <input type="password" name="password" #password="ngModel" ngModel required placeholder="Password" class="input-2" />
       </div>
-      <input type="button" (click)="createUserObj()" value="Log In" class="btn"/>
+      <button type="submit"  [disabled]="form.invalid" class="btn">Log In</button>
+      <div>
+          <small  class="warning" [style.display]="warning ? 'block' : 'none'">
+            {{warningText}}
+          </small>
+      </div>
       <div class="overlap-text">
-      <a href="#">Forgot Password?</a>
-    </div>
-</div>
+        <a href="#">Forgot Password?</a>
+      </div>
+    </form>
   </div>
+</div>
+
   <div class="sub-content">
     <div class="s-part">
       &nbsp;Don't&nbsp;have&nbsp;an&nbsp;account?&nbsp;  <a routerLink="/signup"> &nbsp;Sign&nbsp;up&nbsp;</a>
     </div>
   </div>
-</div>
+
 
 <div class="app">
   <p>Get the app.</p>
@@ -31,4 +38,5 @@
     <a href="https://play.google.com/store/apps/details?id=com.instagram.android&amp;referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26utm_medium%3Dbadge">
       <img src="https://www.instagram.com/static/images/appstore-install-badges/badge_android_english-en.png/f06b908907d5.png">
     </a>  
-  </div>  <!-- App-img end-->
+  </div>  
+</div>  <!-- App-img end-->
